--- a/Ejercicio-04/CalculadoraCientifica.css
+++ b/Ejercicio-04/CalculadoraCientifica.css
@@ -25,29 +25,37 @@ form :nth-child(5n+4){
 }
 
 form :nth-child(1) {
-	grid-column: 1/6;
-	grid-row: 1;
+	grid-column-start: 1;
+	grid-column-end: 6;
+	grid-row-start: 1;
+	grid-row-end: 1;
 	background-color: white;
 	text-align: end;
 }
 
-form :nth-child(2), form :nth-child(3), form :nth-child(4){
-	grid-column: 1/3;
-	grid-row: 2;
+form :nth-child(2) {
+	grid-column-start: 1;
+	grid-column-end: 3;
+	grid-row-start: 2;
+	grid-row-end: 2;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(3){
-	grid-column: 3/5;
-	grid-row: 2;
+	grid-column-start: 3;
+	grid-column-end: 5;
+	grid-row-start: 2;
+	grid-row-end: 2;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(4){
-	grid-column: 5/6;
-	grid-row: 2;
+	grid-column-start: 5;
+	grid-column-end: 6;
+	grid-row-start: 2;
+	grid-row-end: 2;
 	background-color: black;
 	color:white;
 }
