--- a/Ejercicio-05/Calculadora.css
+++ b/Ejercicio-05/Calculadora.css
@@ -21,8 +21,10 @@ form input{
 }
 
 form :nth-child(1) {
-	grid-column: 1/8;
-	grid-row: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 8;
+	grid-row-start: 1;
+	grid-row-end: 3;
 	background-color: white;
 	text-align: end;
 	resize: none;
@@ -31,32 +33,38 @@ form :nth-child(1) {
 }
 
 form :nth-child(2), form :nth-child(5){
-	grid-column: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 3;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(3), form :nth-child(6){
-	grid-column: 3/6;
+	grid-column-start: 3;
+	grid-column-end: 6;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(4), form :nth-child(7){
-	grid-column: 6/8;
+	grid-column-start: 6;
+	grid-column-end: 8;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(8){
-	grid-column: 6/8;
-	grid-row: 5/10;
+	grid-column-start: 6;
+	grid-column-end: 8;
+	grid-row-start: 5;
+	grid-row-end: 10;
 	background-color: blue;
 	color:white;
 }
 
 form :nth-child(4n+9){
-	grid-column: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 3;
 	background-color: red;
 	color:white;
 } 
