--- a/Ejercicio-06/Calculadora.css
+++ b/Ejercicio-06/Calculadora.css
@@ -21,8 +21,10 @@ form input{
 }
 
 form :nth-child(1) {
-	grid-column: 1/8;
-	grid-row: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 8;
+	grid-row-start: 1;
+	grid-row-end: 3;
 	background-color: white;
 	text-align: end;
 	resize: none;
@@ -31,44 +33,52 @@ form :nth-child(1) {
 }
 
 form :nth-child(2), form :nth-child(7){
-	grid-column: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 3;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(5){
-	grid-column: 1/4;
+	grid-column-start: 1;
+	grid-column-end: 4;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(6){
-	grid-column: 5/8;
+	grid-column-start: 5;
+	grid-column-end: 8;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(3), form :nth-child(8){
-	grid-column: 3/6;
+	grid-column-start: 3;
+	grid-column-end: 6;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(4), form :nth-child(9){
-	grid-column: 6/8;
+	grid-column-start: 6;
+	grid-column-end: 8;
 	background-color: black;
 	color:white;
 }
 
 form :nth-child(10){
-	grid-column: 6/8;
-	grid-row: 6/11;
+	grid-column-start: 6;
+	grid-column-end: 8;
+	grid-row-start: 6;
+	grid-row-end: 11;
 	background-color: blue;
 	color:white;
 }
 
 form :nth-child(4n+11){
-	grid-column: 1/3;
+	grid-column-start: 1;
+	grid-column-end: 3;
 	background-color: red;
 	color:white;
 } 
